--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=simpleWebApp
+
+spring.datasource.url=jdbc:h2:mem:narayanreddy
+spring.datasource.driver-class-name=org.h2.Driver
